# fakeNewsChecker

./: .env.example  .gitignore  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
src/: router.py
src/api/bot/: setup.py
src/users/: admin.py
